--- a/website/about.html
+++ b/website/about.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="../styles/homepage.css">
-    <link rel="stylesheet" href="../styles/product.css">
     <link rel="stylesheet" href="../styles/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -21,7 +20,19 @@
 
     <div id="navbar-placeholder"></div>
 
-    <div id="container"></div>
+    <div id="container">
+        <h1>Word from the CEO</h1>
+        <div class="president">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi consectetur exercitationem, deleniti
+                corrupti laboriosam accusamus deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                voluptates, expedita minima dolorem, recusandae deleniti quidem libero placeat sapiente, incidunt ea
+                rerum asperiores voluptatibus cumque voluptatem rem architecto quo cum.</p>
+            <img src="../images/president.png" alt="president" class="president_img">
+        </div>
+
+        <h1>Our Journey</h1>
+
+    </div>
 
     <!-- footer -->
 
