--- a/website/account.html
+++ b/website/account.html
@@ -21,7 +21,7 @@
 <body>
 
 
-        <div id="navbar-placeholder"></div>
+    <div id="navbar-placeholder"></div>
 
 
     <!-- account-details -->
@@ -43,33 +43,33 @@
             </div>
             <div class="v1"></div>
             <div class="details">
-                <div class="pi-details">
-                    <p><strong>Name : </strong></p>
-                    <p><strong>Email : </strong></p>
+                <div id="pi-details">
+                    <p><strong>Name : </strong></p>Saral Sainju
+                    <p><strong>Email : </strong></p>saral@gmail.com
                     <p><strong>Password :</strong><br>******</p>
-                    <p><strong>Phone No. : </strong></p>
+                    <p><strong>Phone No. : </strong></p>548-8961-5689
                 </div>
-                <div class="ai-details">
-                    <p><strong>Delivery Address : </strong></p>
-                    <p><strong>Payment Cards : </strong></p>
-                    <p><strong>Purchases : </strong></p>
+                <div id="ai-details">
+                    <p><strong>Delivery Address : </strong></p>Pokhara St-13
+                    <p><strong>Payment Cards : </strong></p>Paypal,VisaCard
+                    <p><strong>Purchases : </strong></p>None
                 </div>
-                <div class="ea-details">
-                    <p><strong>Change Name : </strong></p>
-                    <p><strong>Change Email : </strong></p>
-                    <p><strong>Change Password :</strong><br>******</p>
-                    <p><strong>Change Phone No. : </strong></p>
-                    <a href="#" class="change-btn">Change</a>
+                <div id="ea-details">
+                    <p><strong>Name : </strong></p><input type="text" />
+                    <p><strong>Email : </strong></p><input type="text" />
+                    <p><strong>Password :</strong></p><input type="text" />
+                    <p><strong>Phone No. : </strong></p><input type="text" /><br>
+                    <button class="change-btn">Change</button>
                 </div>
-                <div class="da-details">
-                    <p style="text-align:center"><strong>Deleting an account</strong></p>
+                <div id="da-details">
+                    <p style="text-align:center; color:rgb(216, 31, 18);"><strong>Deleting an account</strong></p>
                     <p style="padding:20px">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                         <br>
                         Tenetur, saepe dicta est ducimus ipsum nam quos impedit <br>
                         laboriosam animi cupiditate, accusantium corporis aliquid <br>
                         quasi? Harum corrupti repellendus ratione aut veniam?
                     </p>
-                    <a href="#" class="change-btn">Delete Account</a>
+                    <a href="#" class="change-btn delete-btn">Delete Account</a>
                 </div>
             </div>
         </div>
