--- a/website/cart.html
+++ b/website/cart.html
@@ -24,7 +24,7 @@
     <!-- cart-details -->
     <div class="cart-page">
         <div class="cart_header">
-            <h2 id="cart_title">Your Cart</h2>
+            <h2 id="cart_title"></h2>
         </div>
 
         <table class="cart-table">
