--- a/website/footer.html
+++ b/website/footer.html
@@ -16,10 +16,10 @@
             <div class="row">
                 <div class="footer-col-1">
                     <h3>Download our app</h3>
-                    <p>Download App on ios and android</p>
+                    <p>Download the app on ios and android</p>
                     <div class="app-logo">
-                        <img src="../images/app-store.png" alt="">
-                        <img src="../images/play-store.png" alt="">
+                        <img src="../images/app-store.png" class="download_app">
+                        <img src="../images/play-store.png" class="download_app">
                     </div>
                 </div>
                 <div class="footer-col-2">
@@ -29,17 +29,17 @@
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
                     <ul>
-                        <li>Coupons</li>
-                        <li>Coupons</li>
-                        <li>Coupons</li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="#">Coupons</a></li>
+                        <li><a href="login.html">Login/Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="footer-col-4">
                     <h3>Follow Us</h3>
                     <ul>
-                        <li>Facebook</li>
-                        <li>Instagram</li>
-                        <li>Twitter</li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Twitter</a></li>
                     </ul>
                 </div>
             </div>
