--- a/website/account.html
+++ b/website/account.html
@@ -43,34 +43,10 @@
             </div>
             <div class="v1"></div>
             <div class="details">
-                <div id="pi-details">
-                    <p><strong>Name : </strong></p>Saral Sainju
-                    <p><strong>Email : </strong></p>saral@gmail.com
-                    <p><strong>Password :</strong><br>******</p>
-                    <p><strong>Phone No. : </strong></p>548-8961-5689
-                </div>
-                <div id="ai-details">
-                    <p><strong>Delivery Address : </strong></p>Pokhara St-13
-                    <p><strong>Payment Cards : </strong></p>Paypal,VisaCard
-                    <p><strong>Purchases : </strong></p>None
-                </div>
-                <div id="ea-details">
-                    <p><strong>Name : </strong></p><input type="text" />
-                    <p><strong>Email : </strong></p><input type="text" />
-                    <p><strong>Password :</strong></p><input type="text" />
-                    <p><strong>Phone No. : </strong></p><input type="text" /><br>
-                    <button class="change-btn">Change</button>
-                </div>
-                <div id="da-details">
-                    <p style="text-align:center; color:rgb(216, 31, 18);"><strong>Deleting an account</strong></p>
-                    <p style="padding:20px">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                        <br>
-                        Tenetur, saepe dicta est ducimus ipsum nam quos impedit <br>
-                        laboriosam animi cupiditate, accusantium corporis aliquid <br>
-                        quasi? Harum corrupti repellendus ratione aut veniam?
-                    </p>
-                    <a href="#" class="change-btn delete-btn">Delete Account</a>
-                </div>
+                <div id="pi-details"></div>
+                <div id="ai-details"></div>
+                <div id="ea-details"></div>
+                <div id="da-details"> </div>
             </div>
         </div>
     </div>
