--- a/website/product-details.html
+++ b/website/product-details.html
@@ -32,58 +32,13 @@
     <div class="rel-pro">
         <div class="rel-pro-row">
             <h2>Related Products</h2>
-            <p>View More</p>
+            <a href="products.html">View More</a>
         </div>
     </div>
 
     <!-- products -->
     <div class="small-container">
-        <div class="row">
-            <div class="col-4"><img src="../images/Women_Sneakers.png" alt="img1">
-                <h4>Cute Girl</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$45.00</p>
-            </div>
-            <div class="col-4"><img src="../images/Women_Sneakers.png" alt="img1">
-                <h4>Smith-kun</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$105.00</p>
-            </div>
-            <div class="col-4"><img src="../images/Women_Sneakers.png" alt="img1">
-                <h4>Doge</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1.00</p>
-            </div>
-            <div class="col-4"><img src="../images/Women_Sneakers.png" alt="img1">
-                <h4>Mike-sama</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$800.00</p>
-            </div>
-
+        <div class="row" id="related_products">
         </div>
     </div>
     <!-- footer -->
