--- a/website/products.html
+++ b/website/products.html
@@ -18,14 +18,11 @@
 </head>
 
 <body>
-
-
     <div id="navbar-placeholder"></div>
-
 
     <div class="small-container">
         <div class="row row-2" id="products-container">
-            <h2>All Products</h2> 
+            <h2>All Products</h2>
             <select>
                 <option>Default Sorting</option>
                 <option>Sort by Price</option>
@@ -36,13 +33,12 @@
         <div class="row row-items">
             <!-- code injected from homepage.js -->
         </div>
-        <div class="page-btn">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>&#8594</span>
+        <div class="row row-items row_not-active">
+            <!-- code injected from homepage.js -->
         </div>
+    </div>
+
+    <div class="page-btn" id="page_toggle_btn">
     </div>
 
     <div id="footer-placeholder"></div>
