--- a/website/cart.html
+++ b/website/cart.html
@@ -23,6 +23,9 @@
 
     <!-- cart-details -->
     <div class="cart-page">
+        <div id="note"><p>Note:</p> This is a demo website. No actual purchases can be made.<br>
+            PS: Please donot remove top cart item first when there are multiple items. It will break the code. This is a bug that I will fix later.
+        </div>
         <div class="cart_header">
             <h2 id="cart_title"></h2>
         </div>
