final commit for this project 3

--- a/website/cart.html
+++ b/website/cart.html
@@ -24,7 +24,7 @@
     <!-- cart-details -->
     <div class="cart-page">
         <div id="note"><p>Note:</p> This is a demo website. No actual purchases can be made.<br>
-            PS: Please remove the last cart items first when there are multiple items. Otherwise it will break the code. This is a bug that I will fix later.
+            PS: Please remove the last cart item first when there are multiple items. Otherwise it will break the code. This is a bug that I will fix later.
         </div>
         <div class="cart_header">
             <h2 id="cart_title"></h2>
